dropshot/tests/fail/bad_server_endpoint9.stderr
error: endpoint `bad_endpoint` must accept RequestContext<Self::Context> as its first argument
  --> tests/fail/bad_server_endpoint9.rs:27:24
   |
27 |         _params: Query<QueryParams>,
   |                        ^^^^^^^^^^^
